--- a/cicd_lab_b1/pom.xml
+++ b/cicd_lab_b1/pom.xml
@@ -3,4 +3,18 @@
   <groupId>cicd_b1</groupId>
   <artifactId>cicd_lab_b1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+  <plugins>
+           <plugin>
+           <artifactId>maven-compiler-plugin</artifactId>
+           <version>3.1</version>
+           <configuration>
+              <source>1.7</source>
+              <target>1.7</target>
+              <fork>true</fork>
+              <executable>C:\Program Files\Java\jdk-11.0.8\bin\javac</executable>
+           </configuration>
+           </plugin>
+       </plugins>
+  </build>
 </project>
